syntax = "proto3";
package DataService;
option csharp_namespace = "DataService.Rpc";

service PolicyData {
  rpc GetPermissions (UserRequest) returns (PermissionsResponse) {}

  rpc GetRoles (UserRequest) returns (RolesResponse) {}

  rpc HasRoles (HasRolesRequest) returns (HasRolesResponse) {}

  rpc HasPermissions (HasPermissionsRequest) returns (HasPermissionsResponse) {}
}


message UserRequest {
	string id = 1;
}

message PermissionsResponse {
	repeated string permissions = 1;
}

message RolesResponse {
	repeated string roles = 1;
}

message HasRolesRequest {
	string id = 1;
	repeated string roles = 2;
}

message HasRolesResponse {
	bool result = 1;
}

message HasPermissionsRequest {
	string id = 1;
	repeated string permissions = 2;
}

message HasPermissionsResponse {
	bool result = 1;
}